--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,7 +9,7 @@ margin:0;
 padding:0;
 background-image: url(../Pictures/main-image.jpg);
 width:100%;
-height:120vh;
+height:60vh;
 
 
 }
@@ -91,7 +91,7 @@ img {
 .btn {
   color: #ffffff;
   padding: 0.8rem;
-  font-size: 14px;
+  font-size: 18px;
   text-transform: uppercase;
   border-radius: 4px;
   font-weight: 400;
@@ -134,12 +134,12 @@ img {
 }
 .card_content {
   padding: 1rem;
-  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+  background: linear-gradient(to bottom left, #535a5f 40%, #282d32 100%);
 }
 
 .card_title {
   color: #ffffff;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: capitalize;
@@ -148,7 +148,7 @@ img {
 
 .card_text {
   color: #ffffff;
-  font-size: 0.875rem;
+  font-size: 1rem;
   line-height: 1.5;
   margin-bottom: 1.25rem;    
   font-weight: 400;
