--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,11 +9,71 @@ margin:0;
 padding:0;
 background-image: url(../Pictures/main-image.jpg);
 width:100%;
-height:100vh;
-
-
+height:80vh;
+}
+/*********Social Bar****************/
+.vertical-social-bar {
+  position: fixed;
+  left: -15px;
+  top: 208px;
+  background-color: white;
+}
+.social-bar__item {
+  padding: 10px 25px 10px 25px;
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  transition-property: transform, opacity;
+  transition-duration: 100ms;
+  transition-timing-function: ease-in-out;
+}
+.social-bar__item:hover {
+  transform: translate(15px);
+  opacity: 0.9;
+}
+.social-bar__fb {
+  background-color: #3b5999;
+}
+.social-bar__twitter {
+  background-color: #55acee;
+}
+.social-bar__linkedin {
+  background-color: #0077B5;
+}
+.social-bar__instagram {
+  background-color: #e4405f;
 }
 
+/*******Sidebar******************/
+
+.sidenav {
+  width: 280px;
+  position: fixed;
+  z-index: 1;
+  top: 429px;
+  right: 10px;
+  background: #eee;
+  overflow-x: hidden;
+  padding: 8px 0;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #2196F3;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #064579;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+/*******Search bar*****/
 .search-bar {
     position: absolute;
     top:80%;
