--- a/CSS/header.css
+++ b/CSS/header.css
@@ -15,8 +15,13 @@ a{
 	text-decoration: none;
 	color: #fff;
 }
-
-header{
+button [type="submit"] {
+  padding:25px;
+  float:right;
+  border-right: 1px solid #ddd;
+  box-shadow: 1px 0 0 #fff;  
+}
+.main-header{
 	width: 100%;
 	height: 15vh;
 	background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.5)), url("https://images.unsplash.com/photo-1523374228107-6e44bd2b524e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80") center no-repeat;
@@ -25,7 +30,7 @@ header{
   overflow: hidden;
 }
 
-.container{
+.header-container{
 	max-width: 120rem;
 	width: 90%;
 	margin: 0 auto;
@@ -66,41 +71,41 @@ header{
 	display: flex;
 }
 
-.head-nav .head-ul li{
+.head-nav .head-ul #head-li{
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn .5s forwards;
 }
 
-.head-nav .head-ul li:nth-child(1){
+.head-nav .head-ul #head-li:nth-child(1){
 	animation-delay: 0s;
 }
 
-.head-nav .head-ul li:nth-child(2){
+.head-nav .head-ul #head-li:nth-child(2){
 	animation-delay: .5s;
 }
 
-.head-nav .head-ul li:nth-child(3){
+.head-nav .head-ul #head-li:nth-child(3){
 	animation-delay: 1s;
 }
 
-.head-nav .head-ul li:nth-child(4){
+.head-nav .head-ul #head-li:nth-child(4){
 	animation-delay: 1.5s;
 }
 
-.head-nav .head-ul li a{
+.head-nav .head-ul #head-li a{
 	padding: 1rem 0;
 	margin: 0 3rem;
 	position: relative;
 	letter-spacing: 2px;
 }
 
-.head-nav .head-ul li a:last-child{
+.head-nav .head-ul #head-li a:last-child{
 	margin-right: 0;
 }
 
-.head-nav .head-ul li a::before,
-.head-nav .head-ul li a::after{
+.head-nav .head-ul #head-li a::before,
+.head-nav .head-ul  #head-li a::after{
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -111,12 +116,12 @@ header{
 	transition: all .5s;
 }
 
-.head-nav .head-ul li a::before{
+.head-nav .head-ul  #head-li a::before{
 	top: 0;
 	transform-origin: left;
 }
 
-.head-nav .head-ul li a::after{
+.head-nav .head-ul  #head-li a::after{
 	bottom: 0;
 	transform-origin: right;
 }
@@ -134,8 +139,8 @@ header{
   display: none;
 }
 
-.head-nav .head-ul li a:hover::before,
-.head-nav .head-ul li a:hover::after{
+.head-nav .head-ul  #head-li a:hover::before,
+.head-nav .head-ul  #head-li a:hover::after{
 	transform: scaleX(1);
 }
 
@@ -168,11 +173,11 @@ header{
 		flex-direction: column;
 	}
 
-	.head-nav .head-ul li{
+	.head-nav .head-ul #head-li{
 		margin-top: 5rem;
 	}
 
-	.head-nav .head-ul li a{
+	.head-nav .head-ul  #head-li a{
 		margin: 0;
 		font-size: 2.5rem;
 	}
